refactor: Improve imports, move ExportEnvelope to models package
