# api/docs/swagger.yaml
@@ -270,6 +270,158 @@ definitions:
     - enabled
     - send_do_bit
     type: object
+  model.ExportEnvelope:
+    properties:
+      exportedAt:
+        type: string
+      exportedFrom:
+        $ref: '#/definitions/model.ExportedFromInfo'
+      kind:
+        type: string
+      profiles:
+        items:
+          $ref: '#/definitions/model.ExportedProfile'
+        maxItems: 10
+        minItems: 1
+        type: array
+      schemaVersion:
+        type: integer
+    required:
+    - exportedAt
+    - kind
+    - profiles
+    - schemaVersion
+    type: object
+  model.ExportedAdvanced:
+    properties:
+      recursor:
+        enum:
+        - sdns
+        - unbound
+        type: string
+    type: object
+  model.ExportedCustomRule:
+    properties:
+      action:
+        enum:
+        - block
+        - allow
+        - comment
+        type: string
+      comment:
+        maxLength: 200
+        type: string
+      value:
+        maxLength: 255
+        type: string
+    required:
+    - action
+    - value
+    type: object
+  model.ExportedDNSSEC:
+    properties:
+      enabled:
+        type: boolean
+      sendDoBit:
+        type: boolean
+    type: object
+  model.ExportedFromInfo:
+    properties:
+      appVersion:
+        type: string
+      service:
+        type: string
+    type: object
+  model.ExportedLogs:
+    properties:
+      enabled:
+        type: boolean
+      logClientsIPs:
+        type: boolean
+      logDomains:
+        type: boolean
+      retention:
+        enum:
+        - 1h
+        - 6h
+        - 1d
+        - 1w
+        - 1m
+        type: string
+    type: object
+  model.ExportedPrivacy:
+    properties:
+      blocklists:
+        items:
+          type: string
+        maxItems: 100
+        type: array
+      blocklistsSubdomainsRule:
+        enum:
+        - block
+        - allow
+        type: string
+      customRulesSubdomainsRule:
+        enum:
+        - include
+        - exact
+        type: string
+      defaultRule:
+        enum:
+        - block
+        - allow
+        type: string
+      services:
+        items:
+          type: string
+        maxItems: 100
+        type: array
+    required:
+    - blocklists
+    - services
+    type: object
+  model.ExportedProfile:
+    properties:
+      comment:
+        maxLength: 200
+        type: string
+      name:
+        maxLength: 50
+        type: string
+      settings:
+        $ref: '#/definitions/model.ExportedSettings'
+    required:
+    - name
+    - settings
+    type: object
+  model.ExportedSecurity:
+    properties:
+      dnssec:
+        $ref: '#/definitions/model.ExportedDNSSEC'
+    type: object
+  model.ExportedSettings:
+    properties:
+      advanced:
+        $ref: '#/definitions/model.ExportedAdvanced'
+      customRules:
+        items:
+          $ref: '#/definitions/model.ExportedCustomRule'
+        maxItems: 10000
+        type: array
+      logs:
+        $ref: '#/definitions/model.ExportedLogs'
+      privacy:
+        $ref: '#/definitions/model.ExportedPrivacy'
+      security:
+        $ref: '#/definitions/model.ExportedSecurity'
+      statistics:
+        $ref: '#/definitions/model.ExportedStatistics'
+    type: object
+  model.ExportedStatistics:
+    properties:
+      enabled:
+        type: boolean
+    type: object
   model.LogsSettings:
     properties:
       enabled:
@@ -518,158 +670,6 @@ definitions:
     properties:
       enabled:
         description: Indicates if TOTP is enabled.
-        type: boolean
-    type: object
-  profile.ExportEnvelope:
-    properties:
-      exportedAt:
-        type: string
-      exportedFrom:
-        $ref: '#/definitions/profile.ExportedFromInfo'
-      kind:
-        type: string
-      profiles:
-        items:
-          $ref: '#/definitions/profile.ExportedProfile'
-        maxItems: 10
-        minItems: 1
-        type: array
-      schemaVersion:
-        type: integer
-    required:
-    - exportedAt
-    - kind
-    - profiles
-    - schemaVersion
-    type: object
-  profile.ExportedAdvanced:
-    properties:
-      recursor:
-        enum:
-        - sdns
-        - unbound
-        type: string
-    type: object
-  profile.ExportedCustomRule:
-    properties:
-      action:
-        enum:
-        - block
-        - allow
-        - comment
-        type: string
-      comment:
-        maxLength: 200
-        type: string
-      value:
-        maxLength: 255
-        type: string
-    required:
-    - action
-    - value
-    type: object
-  profile.ExportedDNSSEC:
-    properties:
-      enabled:
-        type: boolean
-      sendDoBit:
-        type: boolean
-    type: object
-  profile.ExportedFromInfo:
-    properties:
-      appVersion:
-        type: string
-      service:
-        type: string
-    type: object
-  profile.ExportedLogs:
-    properties:
-      enabled:
-        type: boolean
-      logClientsIPs:
-        type: boolean
-      logDomains:
-        type: boolean
-      retention:
-        enum:
-        - 1h
-        - 6h
-        - 1d
-        - 1w
-        - 1m
-        type: string
-    type: object
-  profile.ExportedPrivacy:
-    properties:
-      blocklists:
-        items:
-          type: string
-        maxItems: 100
-        type: array
-      blocklistsSubdomainsRule:
-        enum:
-        - block
-        - allow
-        type: string
-      customRulesSubdomainsRule:
-        enum:
-        - include
-        - exact
-        type: string
-      defaultRule:
-        enum:
-        - block
-        - allow
-        type: string
-      services:
-        items:
-          type: string
-        maxItems: 100
-        type: array
-    required:
-    - blocklists
-    - services
-    type: object
-  profile.ExportedProfile:
-    properties:
-      comment:
-        maxLength: 200
-        type: string
-      name:
-        maxLength: 50
-        type: string
-      settings:
-        $ref: '#/definitions/profile.ExportedSettings'
-    required:
-    - name
-    - settings
-    type: object
-  profile.ExportedSecurity:
-    properties:
-      dnssec:
-        $ref: '#/definitions/profile.ExportedDNSSEC'
-    type: object
-  profile.ExportedSettings:
-    properties:
-      advanced:
-        $ref: '#/definitions/profile.ExportedAdvanced'
-      customRules:
-        items:
-          $ref: '#/definitions/profile.ExportedCustomRule'
-        maxItems: 10000
-        type: array
-      logs:
-        $ref: '#/definitions/profile.ExportedLogs'
-      privacy:
-        $ref: '#/definitions/profile.ExportedPrivacy'
-      security:
-        $ref: '#/definitions/profile.ExportedSecurity'
-      statistics:
-        $ref: '#/definitions/profile.ExportedStatistics'
-    type: object
-  profile.ExportedStatistics:
-    properties:
-      enabled:
         type: boolean
     type: object
   profile.ImportResult:
@@ -1075,7 +1075,7 @@ definitions:
         - create_new
         type: string
       payload:
-        $ref: '#/definitions/profile.ExportEnvelope'
+        $ref: '#/definitions/model.ExportEnvelope'
       reauth_token:
         minLength: 1
         type: string
@@ -2402,7 +2402,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/profile.ExportEnvelope'
+            $ref: '#/definitions/model.ExportEnvelope'
         "400":
           description: Bad Request
           schema:
